--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="Resume" content="Job Resume about me">
-  <meta name="Anthony Herrera" content="Aherr184">
+  <meta name="AnthonyHerrera" content="Aherr184">
 
   <title>Anthony Herrera - Computer Science</title>
 
@@ -77,16 +77,16 @@
 </p>
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.roblox.com/home">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/aherr184">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://store.epicgames.com/en-US/">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:aherr184@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
